--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,41 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+form {
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 15px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content-wrapper {
+  display: flex;
+  gap: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+
+.input-wrapper label{
+  display: block;
+  margin: 30px 0 10px 0;
 }
 
-.card {
-  padding: 2em;
+.message-item {
+  max-width: 550px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+.message-meta {
+  display: flex;
+  gap: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+.message-subject {
+  width: 20px;
+  background-color: red;
+  border-radius: 50%;
 }
